--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "test": "npx playwright test --pass-with-no-tests",
+  "test": "npx playwright test",
   "test:ui": "npx playwright test --ui",
   "report": "npx playwright show-report"
 },
